--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
       - "50000:50000"
       - "8880:8080"
     restart: always
+    volumes:
+      - type: bind
+        source: ./jenkins_controller/jenkins.yaml
+        target: /usr/share/jenkins/ref/jenkins.yaml
 
   sonarqube:
     depends_on:
