--- a/jenkins_controller/jenkins.yaml
+++ b/jenkins_controller/jenkins.yaml
@@ -41,6 +41,10 @@ credentials:
                 -----END RSA PRIVATE KEY-----
           scope: GLOBAL
           username: "jenkins"
+jobs:
+  - file: /usr/share/jenkins/ref/jobs/backend.groovy
+  - file: /usr/share/jenkins/ref/jobs/frontend.groovy
+  - file: /usr/share/jenkins/ref/jobs/app_of_apps.groovy
 jenkins:
   numExecutors: 0
   nodes:
