Add Terraform installation to Jenkins CasC

--- a/jenkins_controller/jenkins.yaml
+++ b/jenkins_controller/jenkins.yaml
@@ -90,3 +90,11 @@ unclassified:
       triggers:
         skipScmCause: false
         skipUpstreamCause: false
+  terraform:
+    installations:
+    - name: "Terraform"
+      properties:
+      - installSource:
+          installers:
+          - terraformInstaller:
+              id: "41106-linux-amd64"
